--- a/baselibs.conf
+++ b/baselibs.conf
@@ -29,8 +29,8 @@ cross-armv5tel-gcc-accel
   targettype armv5tel -/usr/share/locale
   targettype armv5tel requires "meego-accelerator"
   targettype armv5tel post "#set -x"
-  targettype armv5tel post " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
-  targettype armv5tel post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv5tel post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv5tel post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv5tel post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
   targettype armv5tel post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
   targettype armv5tel post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
@@ -63,7 +63,7 @@ cross-armv5tel-gcc-accel
   targettype armv5tel post "  done "  
   targettype armv5tel post " fi"
 
-  targettype armv5tel preun " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv5tel preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv5tel preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype armv5tel preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv5tel-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
@@ -98,8 +98,8 @@ cross-armv6l-gcc-accel
   targettype armv6l -/usr/share/locale
   targettype armv6l requires "meego-accelerator"
   targettype armv6l post "#set -x"
-  targettype armv6l post " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
-  targettype armv6l post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv6l post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv6l post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv6l post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
   targettype armv6l post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
   targettype armv6l post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
@@ -132,7 +132,7 @@ cross-armv6l-gcc-accel
   targettype armv6l post "  done "  
   targettype armv6l post " fi"
 
-  targettype armv6l preun " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv6l preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv6l preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype armv6l preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv6l-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
@@ -167,8 +167,8 @@ cross-armv7l-gcc-accel
   targettype armv7l -/usr/share/locale
   targettype armv7l requires "meego-accelerator"
   targettype armv7l post "#set -x"
-  targettype armv7l post " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
-  targettype armv7l post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv7l post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv7l post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7l post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
   targettype armv7l post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
   targettype armv7l post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
@@ -201,7 +201,7 @@ cross-armv7l-gcc-accel
   targettype armv7l post "  done "  
   targettype armv7l post " fi"
 
-  targettype armv7l preun " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv7l preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7l preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype armv7l preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv7l-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
@@ -236,8 +236,8 @@ cross-armv7hl-gcc-accel
   targettype armv7hl -/usr/share/locale
   targettype armv7hl requires "meego-accelerator"
   targettype armv7hl post "#set -x"
-  targettype armv7hl post " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
-  targettype armv7hl post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv7hl post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv7hl post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7hl post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
   targettype armv7hl post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
   targettype armv7hl post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
@@ -270,7 +270,7 @@ cross-armv7hl-gcc-accel
   targettype armv7hl post "  done "  
   targettype armv7hl post " fi"
 
-  targettype armv7hl preun " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv7hl preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7hl preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype armv7hl preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv7hl-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
@@ -305,8 +305,8 @@ cross-armv7nhl-gcc-accel
   targettype armv7nhl -/usr/share/locale
   targettype armv7nhl requires "meego-accelerator"
   targettype armv7nhl post "#set -x"
-  targettype armv7nhl post " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
-  targettype armv7nhl post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv7nhl post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv7nhl post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7nhl post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
   targettype armv7nhl post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
   targettype armv7nhl post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
@@ -339,7 +339,7 @@ cross-armv7nhl-gcc-accel
   targettype armv7nhl post "  done "  
   targettype armv7nhl post " fi"
 
-  targettype armv7nhl preun " export GCCVER=$(LANG=C gcc --version | head -1 | cut -d" " -f3) "
+  targettype armv7nhl preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7nhl preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype armv7nhl preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv7nhl-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
