Add MIPS o32 ABI support Fixup -accel dependencies
Signed-off-by: Carsten Munk <carsten.munk@gmail.com>
Change-Id: I6eb0ab3e15b14a0e13fb17bfdcbcc6b474058699

--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl mipsel:mipsel 
 
 cross-armv5tel-gcc-accel
   targettype x86 block!
@@ -7,6 +7,7 @@ cross-armv5tel-gcc-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype mipsel block!
 
   targettype armv5tel autoreqprov off
   targettype armv5tel provides "cross-arm-gcc-accel"
@@ -76,6 +77,7 @@ cross-armv6l-gcc-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype mipsel block!
 
   targettype armv6l autoreqprov off
   targettype armv6l provides "cross-arm-gcc-accel"
@@ -145,6 +147,7 @@ cross-armv7l-gcc-accel
   targettype armv6l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype mipsel block!
 
   targettype armv7l autoreqprov off
   targettype armv7l provides "cross-arm-gcc-accel"
@@ -214,6 +217,7 @@ cross-armv7hl-gcc-accel
   targettype armv6l block!
   targettype armv7l block!
   targettype armv7nhl block!
+  targettype mipsel block!
 
   targettype armv7hl autoreqprov off
   targettype armv7hl provides "cross-arm-gcc-accel"
@@ -283,6 +287,7 @@ cross-armv7nhl-gcc-accel
   targettype armv6l block!
   targettype armv7l block!
   targettype armv7hl block!
+  targettype mipsel block!
 
   targettype armv7nhl autoreqprov off
   targettype armv7nhl provides "cross-arm-gcc-accel"
@@ -342,5 +347,75 @@ cross-armv7nhl-gcc-accel
   targettype armv7nhl preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype armv7nhl preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype armv7nhl preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv7nhl-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
+
+
+
+cross-mipsel-gcc-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+
+  targettype mipsel autoreqprov off
+  targettype mipsel provides "cross-arm-gcc-accel"
+  targettype mipsel requires "glibc-x86-arm"
+  targettype mipsel requires "gmp-x86-arm"
+  targettype mipsel requires "libgcc-x86-arm"
+  targettype mipsel requires "mpfr-x86-arm"
+  targettype mipsel requires "mpc-x86-arm"
+  targettype mipsel requires "gcc"
+  targettype mipsel requires "gcc-c++"
+
+
+  targettype mipsel prefix /emul/ia32-linux
+  targettype mipsel extension -arm
+  targettype mipsel +/
+  targettype mipsel -/usr/lib/debug
+  targettype mipsel -/usr/src/debug
+  targettype mipsel -/usr/share/man
+  targettype mipsel -/usr/share/doc
+  targettype mipsel -/usr/share/locale
+  targettype mipsel requires "meego-accelerator"
+  targettype mipsel post "#set -x"
+  targettype mipsel post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype mipsel post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype mipsel post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
+  targettype mipsel post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
+  targettype mipsel post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
+  targettype mipsel post "  for bin in gcc g++ ; do "
+  targettype mipsel post "   binary="/usr/bin/${bin}" "
+  targettype mipsel post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype mipsel post "     mv ${binary} ${binary}.orig-arm && cp <prefix>${binary} ${binary}"
+  targettype mipsel post "   else "
+  targettype mipsel post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype mipsel post "   fi "
+  targettype mipsel post "  done "
+
+  targettype mipsel post "  for bin in cc1 cc1plus ; do "
+  targettype mipsel post "   binary="/usr/libexec/gcc/mipsel-meego-linux-gnueabi/$GCCVER/$bin" "
+  targettype mipsel post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype mipsel post "     mv ${binary} ${binary}.orig-arm && cp <prefix>/usr/libexec/gcc/mipsel-meego-linux-gnueabi/$GCCVER_NEW/${bin} ${binary}"
+  targettype mipsel post "   else "
+  targettype mipsel post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype mipsel post "   fi "
+  targettype mipsel post "  done "
+  targettype mipsel post " else"
+  targettype mipsel post "  echo "GCC and GCC-accel versions don't match. Rollback also binutils..." "
+  targettype mipsel post "  for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"  
+  targettype mipsel post "   binary="/usr/bin/${bin}" "  
+  targettype mipsel post "   if test -e ${binary}.orig-arm ; then"  
+  targettype mipsel post "     rm ${binary} && mv ${binary}.orig-arm ${binary}"  
+  targettype mipsel post "   else "  
+  targettype mipsel post "     echo "${binary}.orig-arm not present !" "  
+  targettype mipsel post "   fi "  
+  targettype mipsel post "  done "  
+  targettype mipsel post " fi"
+
+  targettype mipsel preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype mipsel preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
+  targettype mipsel preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/mipsel-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
 
