--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl mipsel:mipsel 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel 
 
 cross-armv5tel-gcc-accel
   targettype x86 block!
@@ -7,6 +7,7 @@ cross-armv5tel-gcc-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv5tel autoreqprov off
@@ -77,6 +78,7 @@ cross-armv6l-gcc-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv6l autoreqprov off
@@ -147,6 +149,7 @@ cross-armv7l-gcc-accel
   targettype armv6l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv7l autoreqprov off
@@ -217,6 +220,7 @@ cross-armv7hl-gcc-accel
   targettype armv6l block!
   targettype armv7l block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv7hl autoreqprov off
@@ -287,6 +291,7 @@ cross-armv7nhl-gcc-accel
   targettype armv6l block!
   targettype armv7l block!
   targettype armv7hl block!
+  targettype armv7tnhl block!
   targettype mipsel block!
 
   targettype armv7nhl autoreqprov off
@@ -350,6 +355,77 @@ cross-armv7nhl-gcc-accel
 
 
 
+cross-armv7tnhl-gcc-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+  targettype mipsel block!
+
+  targettype armv7tnhl autoreqprov off
+  targettype armv7tnhl provides "cross-arm-gcc-accel"
+  targettype armv7tnhl requires "glibc-x86-arm"
+  targettype armv7tnhl requires "gmp-x86-arm"
+  targettype armv7tnhl requires "libgcc-x86-arm"
+  targettype armv7tnhl requires "mpfr-x86-arm"
+  targettype armv7tnhl requires "mpc-x86-arm"
+  targettype armv7tnhl requires "gcc"
+  targettype armv7tnhl requires "gcc-c++"
+
+
+  targettype armv7tnhl prefix /emul/ia32-linux
+  targettype armv7tnhl extension -arm
+  targettype armv7tnhl +/
+  targettype armv7tnhl -/usr/lib/debug
+  targettype armv7tnhl -/usr/src/debug
+  targettype armv7tnhl -/usr/share/man
+  targettype armv7tnhl -/usr/share/doc
+  targettype armv7tnhl -/usr/share/locale
+  targettype armv7tnhl requires "meego-accelerator"
+  targettype armv7tnhl post "#set -x"
+  targettype armv7tnhl post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv7tnhl post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv7tnhl post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
+  targettype armv7tnhl post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
+  targettype armv7tnhl post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
+  targettype armv7tnhl post "  for bin in gcc g++ ; do "
+  targettype armv7tnhl post "   binary="/usr/bin/${bin}" "
+  targettype armv7tnhl post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype armv7tnhl post "     mv ${binary} ${binary}.orig-arm && cp <prefix>${binary} ${binary}"
+  targettype armv7tnhl post "   else "
+  targettype armv7tnhl post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype armv7tnhl post "   fi "
+  targettype armv7tnhl post "  done "
+
+  targettype armv7tnhl post "  for bin in cc1 cc1plus ; do "
+  targettype armv7tnhl post "   binary="/usr/libexec/gcc/armv7tnhl-meego-linux-gnueabi/$GCCVER/$bin" "
+  targettype armv7tnhl post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype armv7tnhl post "     mv ${binary} ${binary}.orig-arm && cp <prefix>/usr/libexec/gcc/armv7tnhl-meego-linux-gnueabi/$GCCVER_NEW/${bin} ${binary}"
+  targettype armv7tnhl post "   else "
+  targettype armv7tnhl post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype armv7tnhl post "   fi "
+  targettype armv7tnhl post "  done "
+  targettype armv7tnhl post " else"
+  targettype armv7tnhl post "  echo "GCC and GCC-accel versions don't match. Rollback also binutils..." "
+  targettype armv7tnhl post "  for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"  
+  targettype armv7tnhl post "   binary="/usr/bin/${bin}" "  
+  targettype armv7tnhl post "   if test -e ${binary}.orig-arm ; then"  
+  targettype armv7tnhl post "     rm ${binary} && mv ${binary}.orig-arm ${binary}"  
+  targettype armv7tnhl post "   else "  
+  targettype armv7tnhl post "     echo "${binary}.orig-arm not present !" "  
+  targettype armv7tnhl post "   fi "  
+  targettype armv7tnhl post "  done "  
+  targettype armv7tnhl post " fi"
+
+  targettype armv7tnhl preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype armv7tnhl preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
+  targettype armv7tnhl preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/armv7tnhl-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
+
+
+
 cross-mipsel-gcc-accel
   targettype x86 block!
   targettype 32bit block!
@@ -358,6 +434,7 @@ cross-mipsel-gcc-accel
   targettype armv7l block!
   targettype armv7hl block!
   targettype armv7nhl block!
+  targettype armv7tnhl block!
 
   targettype mipsel autoreqprov off
   targettype mipsel provides "cross-arm-gcc-accel"
