Add i486 cross target
Signed-off-by: David Greaves <david@dgreaves.com>

--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel i486:i486 
 
 cross-armv5tel-gcc-accel
   targettype x86 block!
@@ -9,6 +9,7 @@ cross-armv5tel-gcc-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv5tel autoreqprov off
   targettype armv5tel provides "cross-arm-gcc-accel"
@@ -80,6 +81,7 @@ cross-armv6l-gcc-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv6l autoreqprov off
   targettype armv6l provides "cross-arm-gcc-accel"
@@ -151,6 +153,7 @@ cross-armv7l-gcc-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7l autoreqprov off
   targettype armv7l provides "cross-arm-gcc-accel"
@@ -222,6 +225,7 @@ cross-armv7hl-gcc-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7hl autoreqprov off
   targettype armv7hl provides "cross-arm-gcc-accel"
@@ -293,6 +297,7 @@ cross-armv7nhl-gcc-accel
   targettype armv7hl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7nhl autoreqprov off
   targettype armv7nhl provides "cross-arm-gcc-accel"
@@ -364,6 +369,7 @@ cross-armv7tnhl-gcc-accel
   targettype armv7hl block!
   targettype armv7nhl block!
   targettype mipsel block!
+  targettype i486 block!
 
   targettype armv7tnhl autoreqprov off
   targettype armv7tnhl provides "cross-arm-gcc-accel"
@@ -435,6 +441,7 @@ cross-mipsel-gcc-accel
   targettype armv7hl block!
   targettype armv7nhl block!
   targettype armv7tnhl block!
+  targettype i486 block!
 
   targettype mipsel autoreqprov off
   targettype mipsel provides "cross-arm-gcc-accel"
@@ -494,5 +501,77 @@ cross-mipsel-gcc-accel
   targettype mipsel preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype mipsel preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype mipsel preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/mipsel-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
+
+
+
+cross-i486-gcc-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+  targettype armv7tnhl block!
+  targettype mipsel block!
+
+  targettype i486 autoreqprov off
+  targettype i486 provides "cross-arm-gcc-accel"
+  targettype i486 requires "glibc-x86-arm"
+  targettype i486 requires "gmp-x86-arm"
+  targettype i486 requires "libgcc-x86-arm"
+  targettype i486 requires "mpfr-x86-arm"
+  targettype i486 requires "mpc-x86-arm"
+  targettype i486 requires "gcc"
+  targettype i486 requires "gcc-c++"
+
+
+  targettype i486 prefix /emul/ia32-linux
+  targettype i486 extension -arm
+  targettype i486 +/
+  targettype i486 -/usr/lib/debug
+  targettype i486 -/usr/src/debug
+  targettype i486 -/usr/share/man
+  targettype i486 -/usr/share/doc
+  targettype i486 -/usr/share/locale
+  targettype i486 requires "meego-accelerator"
+  targettype i486 post "#set -x"
+  targettype i486 post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype i486 post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype i486 post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
+  targettype i486 post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
+  targettype i486 post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
+  targettype i486 post "  for bin in gcc g++ ; do "
+  targettype i486 post "   binary="/usr/bin/${bin}" "
+  targettype i486 post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype i486 post "     mv ${binary} ${binary}.orig-arm && cp <prefix>${binary} ${binary}"
+  targettype i486 post "   else "
+  targettype i486 post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype i486 post "   fi "
+  targettype i486 post "  done "
+
+  targettype i486 post "  for bin in cc1 cc1plus ; do "
+  targettype i486 post "   binary="/usr/libexec/gcc/i486-meego-linux-gnueabi/$GCCVER/$bin" "
+  targettype i486 post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype i486 post "     mv ${binary} ${binary}.orig-arm && cp <prefix>/usr/libexec/gcc/i486-meego-linux-gnueabi/$GCCVER_NEW/${bin} ${binary}"
+  targettype i486 post "   else "
+  targettype i486 post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype i486 post "   fi "
+  targettype i486 post "  done "
+  targettype i486 post " else"
+  targettype i486 post "  echo "GCC and GCC-accel versions don't match. Rollback also binutils..." "
+  targettype i486 post "  for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"  
+  targettype i486 post "   binary="/usr/bin/${bin}" "  
+  targettype i486 post "   if test -e ${binary}.orig-arm ; then"  
+  targettype i486 post "     rm ${binary} && mv ${binary}.orig-arm ${binary}"  
+  targettype i486 post "   else "  
+  targettype i486 post "     echo "${binary}.orig-arm not present !" "  
+  targettype i486 post "   fi "  
+  targettype i486 post "  done "  
+  targettype i486 post " fi"
+
+  targettype i486 preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype i486 preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
+  targettype i486 preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/i486-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
 
