--- a/baselibs.conf
+++ b/baselibs.conf
@@ -1,4 +1,4 @@
-arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel i486:i486 
+arch i586 targets armv5tel:armv5tel armv6l:armv6l armv7l:armv7l armv7hl:armv7hl armv7nhl:armv7nhl armv7tnhl:armv7tnhl mipsel:mipsel i486:i486 x86_64:x86_64 
 
 cross-armv5tel-gcc-accel
   targettype x86 block!
@@ -10,6 +10,7 @@ cross-armv5tel-gcc-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv5tel autoreqprov off
   targettype armv5tel provides "cross-arm-gcc-accel"
@@ -82,6 +83,7 @@ cross-armv6l-gcc-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv6l autoreqprov off
   targettype armv6l provides "cross-arm-gcc-accel"
@@ -154,6 +156,7 @@ cross-armv7l-gcc-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7l autoreqprov off
   targettype armv7l provides "cross-arm-gcc-accel"
@@ -226,6 +229,7 @@ cross-armv7hl-gcc-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7hl autoreqprov off
   targettype armv7hl provides "cross-arm-gcc-accel"
@@ -298,6 +302,7 @@ cross-armv7nhl-gcc-accel
   targettype armv7tnhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7nhl autoreqprov off
   targettype armv7nhl provides "cross-arm-gcc-accel"
@@ -370,6 +375,7 @@ cross-armv7tnhl-gcc-accel
   targettype armv7nhl block!
   targettype mipsel block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype armv7tnhl autoreqprov off
   targettype armv7tnhl provides "cross-arm-gcc-accel"
@@ -442,6 +448,7 @@ cross-mipsel-gcc-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype i486 block!
+  targettype x86_64 block!
 
   targettype mipsel autoreqprov off
   targettype mipsel provides "cross-arm-gcc-accel"
@@ -514,6 +521,7 @@ cross-i486-gcc-accel
   targettype armv7nhl block!
   targettype armv7tnhl block!
   targettype mipsel block!
+  targettype x86_64 block!
 
   targettype i486 autoreqprov off
   targettype i486 provides "cross-arm-gcc-accel"
@@ -573,5 +581,78 @@ cross-i486-gcc-accel
   targettype i486 preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
   targettype i486 preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
   targettype i486 preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/i486-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
+
+
+
+cross-x86_64-gcc-accel
+  targettype x86 block!
+  targettype 32bit block!
+  targettype armv5tel block!
+  targettype armv6l block!
+  targettype armv7l block!
+  targettype armv7hl block!
+  targettype armv7nhl block!
+  targettype armv7tnhl block!
+  targettype mipsel block!
+  targettype i486 block!
+
+  targettype x86_64 autoreqprov off
+  targettype x86_64 provides "cross-arm-gcc-accel"
+  targettype x86_64 requires "glibc-x86-arm"
+  targettype x86_64 requires "gmp-x86-arm"
+  targettype x86_64 requires "libgcc-x86-arm"
+  targettype x86_64 requires "mpfr-x86-arm"
+  targettype x86_64 requires "mpc-x86-arm"
+  targettype x86_64 requires "gcc"
+  targettype x86_64 requires "gcc-c++"
+
+
+  targettype x86_64 prefix /emul/ia32-linux
+  targettype x86_64 extension -arm
+  targettype x86_64 +/
+  targettype x86_64 -/usr/lib/debug
+  targettype x86_64 -/usr/src/debug
+  targettype x86_64 -/usr/share/man
+  targettype x86_64 -/usr/share/doc
+  targettype x86_64 -/usr/share/locale
+  targettype x86_64 requires "meego-accelerator"
+  targettype x86_64 post "#set -x"
+  targettype x86_64 post " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype x86_64 post " export GCCVER_NEW=$(LANG=C <prefix>/usr/bin/gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype x86_64 post " echo \"GCCVER: $GCCVER     GCCVER_NEW: $GCCVER_NEW \" "
+  targettype x86_64 post " if test "${GCCVER}" == "${GCCVER_NEW}"; then"
+  targettype x86_64 post "  echo "GCC and GCC-accel versions match. Enabling cross-compiler." "
+  targettype x86_64 post "  for bin in gcc g++ ; do "
+  targettype x86_64 post "   binary="/usr/bin/${bin}" "
+  targettype x86_64 post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype x86_64 post "     mv ${binary} ${binary}.orig-arm && cp <prefix>${binary} ${binary}"
+  targettype x86_64 post "   else "
+  targettype x86_64 post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype x86_64 post "   fi "
+  targettype x86_64 post "  done "
+
+  targettype x86_64 post "  for bin in cc1 cc1plus ; do "
+  targettype x86_64 post "   binary="/usr/libexec/gcc/x86_64-meego-linux-gnueabi/$GCCVER/$bin" "
+  targettype x86_64 post "   if test -e ${binary} -a ! -e ${binary}.orig-arm ; then"
+  targettype x86_64 post "     mv ${binary} ${binary}.orig-arm && cp <prefix>/usr/libexec/gcc/x86_64-meego-linux-gnueabi/$GCCVER_NEW/${bin} ${binary}"
+  targettype x86_64 post "   else "
+  targettype x86_64 post "     echo "${binary} not installed or ${binary}.orig-arm already present !" "
+  targettype x86_64 post "   fi "
+  targettype x86_64 post "  done "
+  targettype x86_64 post " else"
+  targettype x86_64 post "  echo "GCC and GCC-accel versions don't match. Rollback also binutils..." "
+  targettype x86_64 post "  for bin in addr2line ar as c++filt gprov ld nm objcopy objdump ranlib readelf size strings strip ; do"  
+  targettype x86_64 post "   binary="/usr/bin/${bin}" "  
+  targettype x86_64 post "   if test -e ${binary}.orig-arm ; then"  
+  targettype x86_64 post "     rm ${binary} && mv ${binary}.orig-arm ${binary}"  
+  targettype x86_64 post "   else "  
+  targettype x86_64 post "     echo "${binary}.orig-arm not present !" "  
+  targettype x86_64 post "   fi "  
+  targettype x86_64 post "  done "  
+  targettype x86_64 post " fi"
+
+  targettype x86_64 preun " export GCCVER=$(LANG=C gcc --version | head -1 | sed 's/\([a-z+]*\) \((.*)\) \([1-9\.]*\)\(.*\)/\3/') "
+  targettype x86_64 preun " for i in gcc g++ ; do if test -e /usr/bin/${i}.orig-arm ; then rm /usr/bin/${i} ; mv /usr/bin/${i}.orig-arm /usr/bin/${i}; fi ; done "
+  targettype x86_64 preun " for i in cc1 cc1plus ; do cd /usr/libexec/gcc/x86_64-meego-linux-gnueabi/$GCCVER ; if test -e ${i}.orig-arm ; then rm ${i} ; mv ${i}.orig-arm ${i} ; fi ; done "
 
 
